--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,20 @@
             <artifactId>jfoenix</artifactId>
             <version>8.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.7</version>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.mongojack</groupId>
+            <artifactId>mongojack</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
+    
 
     </dependencies>
 
